# GIS-agent

./: .gitignore  INSTALL.md  README.md  pyproject.toml  一键启动.bat
config/: execution_adapter_config.json  intents.json  llm_config.example.json  llm_config.json.example  recovery_strategies.json
src/baml_client/: __init__.py
src/gis_cli/: __init__.py  arcpy_bridge.py  catalog.py  cli.py  document_parser.py  models.py  orchestrator.py  planner.py  planner_adapter.py  recovery_state_machine.py  requirement_mapper.py  safety.py  storage.py  workflow_assembler.py
src/gis_cli/agent/: __init__.py  agent.py  cli.py  context_hub.py  evaluation.py  execution_adapter.py  executor.py  gis_domain_prompts.py  llm.py  memory.py  model_adaptation.py  planner.py  prompts.py  state_manager.py  vector_retriever.py  workspace.py
src/gis_cli/agent/baml/: gis_agent_types.baml
src/gis_cli/core/: __init__.py  context.py  registry.py  task.py  tool.py
src/gis_cli/runner/: __init__.py  arcpy_runner.py
src/gis_cli/skills/: __init__.py  base.py  bundled.py  loader.py
src/gis_cli/tools/: __init__.py  execute_code.py  export_map.py  merge_layers.py  project_layers.py  quality_check.py  read_pdf.py  read_word.py  scan_layers.py  web_search.py
src/gis_cli/web/: __init__.py  api.py  streamlit_app.py  ui_launcher.py
src/gis_task_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
workspace/: README.md
workspace/skills/: buffer_analysis.md  clip_analysis.md  dissolve_features.md  field_calculator.md  intersect_analysis.md
